refactoring aplicar DDD en Booking ademas añadir Value Objects y optimizar persistencia del codigo
La finalidad de esto fue reemplazar los tipos primitivos por Value Objects (Money, Email, SeatNumber, Password) y ademas se enriquecio la entidad Booking agregandole lógica de negocio centralizada junto a esto se  eliminan los setters públicos, por ultimo se optimiza CreateBookingService agregandole el uso de Mapper para aislar la logica de domain, en consecuencia de estos cambios se corrigieron y adaptaron las pruebas unitarias a la nueva estructura.